--- a/package.json
+++ b/package.json
@@ -2,5 +2,34 @@
   "devDependencies": {
     "web3-provider-engine": "8",
     "web3": "*"
-  }
+  },
+  "name": "etherflipper",
+  "version": "0.1.0",
+  "description": "Live Trustless Coin Flip",
+  "main": "truffle.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {},
+  "scripts": {
+    "test": "truffle test",
+    "start": "truffle serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zmitton/EtherFlipper.git"
+  },
+  "keywords": [
+    "ethereum",
+    "coin",
+    "flip",
+    "random",
+    "trustless"
+  ],
+  "author": "Zac Mitton",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zmitton/EtherFlipper/issues"
+  },
+  "homepage": "https://github.com/zmitton/EtherFlipper#readme"
 }
