--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "test"
   },
   "dependencies": {},
+    "truffle" : "*",
   "scripts": {
     "test": "truffle test",
     "start": "truffle serve"
