removed truffle dependency

--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "name": "etherflipper",
   "version": "0.1.0",
   "description": "Live Trustless Coin Flip",
-  "main": "truffle.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "truffle": "^2.1.1"
+    "express": "^4.14.0"
   },
   "scripts": {
-    "start": "./truffle build && ./truffle compile && ./truffle serve"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
